--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,15 @@
 Package: keggAPI
 Type: Package
-Title: What the Package Does (Title Case)
+Title: KEGG API
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Imports:
+    RCurl,
+    stringr
+Author: Von Weber
+Maintainer: Von Weber <vonweb@163.com>
+Description: KEGG web API
+    Packaging KEGG web API into R functions.
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.0
