--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,4 +13,13 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.0
-
+Collate: 
+    'hello.R'
+    'parse_kEGG_URL.R'
+    'keggConv.R'
+    'trick.R'
+    'parse_KEGG_URL.R'
+    'keggFind.R'
+    'keggGetImage.R'
+    'keggInfo.R'
+    'keggList.R'
