--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(keggConv)
 export(keggFind)
 export(keggGetImage)
 export(keggInfo)
+export(keggLink)
 export(keggList)
 import(stringr)
 import(utils)
