--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: KEGG web API
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.0
+RoxygenNote: 6.0.1
 Collate: 
     'hello.R'
     'parse_kEGG_URL.R'
@@ -22,4 +22,5 @@ Collate:
     'keggFind.R'
     'keggGetImage.R'
     'keggInfo.R'
+    'keggLink.R'
     'keggList.R'
