--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Version: 0.1.0
 Imports:
     RCurl,
     stringr
+    untils
 Author: Von Weber
 Maintainer: Von Weber <vonweb@163.com>
 Description: KEGG web API
@@ -13,15 +14,4 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Collate: 
-    'hello.R'
-    'trick.R'
-    'keggColor.R'
-    'parse_kEGG_URL.R'
-    'keggConv.R'
-    'parse_KEGG_URL.R'
-    'keggFind.R'
-    'keggGetImage.R'
-    'keggInfo.R'
-    'keggLink.R'
-    'keggList.R'
+
