--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(keggGetImage)
 export(keggInfo)
 export(keggLink)
 export(keggList)
+export(kegg_name2id)
 import(RCurl)
 import(stringr)
 import(utils)
