--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(keggInfo)
 export(keggLink)
 export(keggList)
 export(kegg_name2id)
+export(matchSymbol)
 import(RCurl)
 import(stringr)
 import(utils)
